<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cakeback"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/navBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:gravity="right"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24"
            tools:ignore="VectorDrawableCompat" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/cart"
                android:textColor="#1E1E1E"
                android:textSize="24sp" />
        </FrameLayout>

        <ImageView
            android:id="@+id/btnCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            app:srcCompat="@drawable/ic_baseline_shopping_cart_24"
            tools:ignore="VectorDrawableCompat" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scroolView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@+id/navBar"
        android:layout_margin="10dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/main_back"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navBar">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:id="@+id/recycle_cart"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#FBFBFB"
        android:orientation="horizontal"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/lblTotalCartCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/total_cost"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnPay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay"
            app:icon="@drawable/ic_baseline_attach_money_24" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>