<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cakeback"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/navBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:gravity="right"
        android:orientation="horizontal"
        android:padding="10dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Product"
                android:textSize="24sp" />
        </FrameLayout>


        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/btnCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                app:srcCompat="@drawable/ic_baseline_shopping_cart_24"
                tools:ignore="VectorDrawableCompat" />

            <com.nex3z.notificationbadge.NotificationBadge
                android:id="@+id/badge"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignTop="@+id/cartButton"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/cartButton"
                app:nbMaxTextLength="3" />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/navBar"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/main_back"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgItemImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="20dp"
            android:padding="10dp"
            app:srcCompat="@drawable/ic_baseline_image_24"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/lblItemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:text="Rose venila hevan"
            android:textColor="#931678"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="10dp"
                android:layout_weight="4"
                android:text="Rs."
                android:textColor="#504A4A"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/lblItemPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_weight="1"
                android:text="1500"
                android:textColor="#504A4A"
                android:textSize="24sp" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/radSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="50dp"
            android:paddingTop="10dp"
            android:paddingRight="24dp">

            <RadioButton
                android:id="@+id/oneKg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_1kg" />

            <RadioButton
                android:id="@+id/halfGram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_500g" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAddToCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/add_to_cart"
                app:backgroundTint="#D774E3" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>